--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -1,3 +1,9 @@
+name: Nightly Ingest (Gorgias → Supabase)
+
+on:
+  schedule:
+    - cron: "0 9 * * *"  # 09:00 UTC daily
+  workflow_dispatch: {}
 import os
 import base64
 import time
